--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,8 @@
 Package: capstonePrototype
-Title: What the Package Does (One Line, Title Case)
+Title: Shiny app with energy consumption of the cities Zurich, Basel and Winterthur
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Sara", "Hänzi", , "first.last@example.com", role = c("aut", "cre"))
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
