--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(run)
 import(shiny)
 importFrom(bslib,bs_theme)
 importFrom(htmltools,htmlDependency)
+importFrom(magrittr,"%>%")
 importFrom(shiny,shinyApp)
 importFrom(shiny,tags)
