--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,17 @@
 
 export(run)
 import(shiny)
+importFrom(bslib,"card,")
+importFrom(bslib,"card_body_fill,")
+importFrom(bslib,"card_header,")
 importFrom(bslib,bs_theme)
+importFrom(bslib,card_footer)
+importFrom(htmltools,div)
 importFrom(htmltools,htmlDependency)
+importFrom(htmltools,tag)
 importFrom(magrittr,"%>%")
+importFrom(shiny,column)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tags)
+importFrom(shinyWidgets,materialSwitch)
+importFrom(shinycustomloader,withLoader)
