add files for automatic deployment

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,9 @@ Imports:
     bslib,
     data.table,
     dplyr,
+    fable,
+    fabletools,
+    feasts,
     ggplot2,
     glue,
     htmltools,
