--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Update data
         run: |
+          library(magrittr)
           source("R/utils_data_wrangle.R")
           source("R/utils_get_data.R")
           source("R/utils_module_dataviz.R")
