--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -14,6 +14,8 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
       - uses: r-lib/actions/setup-r@v2
         with:
@@ -21,7 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages(c("curl", "data.table", "devtools", "dplyr", "fable",
+          install.packages(c("curl", "data.table" "dplyr", "fable",
           "fabletools", "feasts", "glue", "htmltools", "janitor", "lubridate",
           "magrittr", "purrr", "tidyr", "tsibble"))
         shell: Rscript {0}
@@ -43,6 +45,8 @@ jobs:
         shell: Rscript {0}
 
       - name: Commit files
+        with:
+          github_token: ${{ secrets.PAT}}
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
