--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages(c("curl", "data.table" "dplyr", "fable",
+          install.packages(c("curl", "data.table", "dplyr", "fable",
           "fabletools", "feasts", "glue", "htmltools", "janitor", "lubridate",
           "magrittr", "purrr", "tidyr", "tsibble"))
         shell: Rscript {0}
