--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -46,6 +46,7 @@ jobs:
 
       - name: Commit files
         run: |
+          git remote -v
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add --all
