--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -47,8 +47,8 @@ jobs:
       - name: Commit files
         run: |
           git remote -v
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
           git add --all
           git commit -am "add latest data"
           git push
