--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -10,11 +10,10 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
-    env:
-      github_token: ${{ secrets.PAT}}
     steps:
       - uses: actions/checkout@v2
         with:
+          github_token: ${{ secrets.PAT}}
           persist-credentials: false
 
       - uses: r-lib/actions/setup-r@v2
@@ -45,6 +44,8 @@ jobs:
         shell: Rscript {0}
 
       - name: Commit files
+        with:
+          github_token: ${{ secrets.PAT}}
         run: |
           git remote -v
           git config --global user.email "actions@github.com"
