--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Commit files
         run: |
           git remote -v
-          git config --global user.email "actions@github.com"
+          git config --global user.email "shaenzi@users.noreply.github.com"
           git config --global user.name "GitHub Actions"
           git add --all
           git commit -am "add latest data"
