--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -10,10 +10,10 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.PAT}}
     steps:
       - uses: actions/checkout@v2
-        with:
-          github_token: ${{ secrets.PAT}}
 
       - uses: r-lib/actions/setup-r@v2
         with:
@@ -42,10 +42,24 @@ jobs:
           source("data-raw/03_prepare_data_for_modules.R")
         shell: Rscript {0}
 
-      - name: Commit files
-        run: |
-          git config --global user.email "shaenzi@users.noreply.github.com"
-          git config --global user.name "GitHub Actions"
-          git add --all
-          git commit -m "add latest data"
-          git push
+      - name: Git Commit/Push Changes
+        uses: actions-x/commit@v6
+        with:
+          # The committer's email address
+          email: ${{ github.actor }}@localhost
+          # The committer's name
+          name: ${{ github.actor }}
+          # The commit message
+          message: Automatic data update using GitHub Actions
+          # The branch to push the changes back to, defaults to the current branch
+          branch: ${{ github.ref }}
+          # The files to add separated by space, defaults to every file
+          files: .
+          # The repository to push the code to, defaults to origin (e.g. this repository)
+          repository: origin
+          # The token used to push the code, not needed if you push to the same repository
+          token:  ${{ secrets.PAT}}
+          # Whether to perform force push
+          force: 0
+          # The working directory that will be used for git commands
+          directory: .
