try without the github pattern in the env in the update data action

--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -10,8 +10,8 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.PAT}}
+    #env:
+      #GITHUB_PAT: ${{ secrets.PAT}}
     steps:
       - uses: actions/checkout@v2
 
