also appropriately adjust description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ Imports:
     purrr,
     scales,
     shiny,
-    shinycustomloader,
+    shinycssloaders,
     shinyWidgets,
     thematic,
     tidyr,
