test whether other token works

--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Git Commit/Push Changes
         uses: github-actions-x/commit@v2.9
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN  }}
+          github-token: ${{ secrets.PAT  }}
           push-branch: main
           name: GitHub Action Bot
           email: ${{ github.actor }}@localhost
