--- a/.github/workflows/deploy_push.yaml
+++ b/.github/workflows/deploy_push.yaml
@@ -5,7 +5,7 @@ on:
   # deploy every morning after data was updated with other action
   schedule:
     - cron: "0 5 * * *"
-    
+
   # Triggers the workflow on push or pull request events
   push:
     branches: [ main ]
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: Ubuntu-20.04
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
