--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -24,13 +24,8 @@ jobs:
 
       # set up renv
       - uses: r-lib/actions/setup-renv@v2
-
-      - uses: actions/cache@v1
         with:
-          path: ${{ env.RENV_PATHS_ROOT }}
-          key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-renv-
+          profile: '"shiny"'
 
       - name: Update data
         run: |
