--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -17,7 +17,7 @@ jobs:
       GITHUB_PAT: ${{ secrets.PAT}}
     steps:
       - uses: actions/checkout@v2
-      - ls
+      - run: ls
 
       - uses: r-lib/actions/setup-r@v2
         with:
