--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -12,14 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.PAT}}
-      RENV_PATHS_ROOT: ~/.cache/R/renv
     steps:
       - uses: actions/checkout@v2
-      - run: ls
+      - name: Set RENV_PATHS_ROOT
+        shell: bash
+        run: echo "RENV_PATHS_ROOT=${{ runner.temp }}/renv" >> $GITHUB_ENV
 
       - uses: r-lib/actions/setup-r@v2
         with:
-          use-public-rspm: true
+          use-public-rspm: tr  ue
 
       # set up renv
       - uses: r-lib/actions/setup-renv@v2
