--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -14,18 +14,17 @@ jobs:
       GITHUB_PAT: ${{ secrets.PAT}}
     steps:
       - uses: actions/checkout@v2
-      - name: Set RENV_PATHS_ROOT
-        shell: bash
-        run: echo "RENV_PATHS_ROOT=${{ runner.temp }}/renv" >> $GITHUB_ENV
 
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
 
-      # set up renv
-      - uses: r-lib/actions/setup-renv@v2
-        with:
-          profile: '"shiny"'
+      - name: Install dependencies
+        run: |
+          install.packages(c("curl", "data.table", "dplyr", "fable",
+          "fabletools", "feasts", "glue", "htmltools", "janitor", "lubridate",
+          "magrittr", "purrr", "tidyr", "tsibble", "usethis"))
+        shell: Rscript {0}
 
       - name: Update data
         run: |
