revert to working pipeline, never mind renv and cache

--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -21,8 +21,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages("renv")
-          renv::restore()
+          install.packages(c("curl", "data.table", "dplyr", "fable",
+          "fabletools", "feasts", "glue", "htmltools", "janitor", "lubridate",
+          "magrittr", "purrr", "tidyr", "tsibble", "usethis"))
         shell: Rscript {0}
 
       - name: Update data
