--- a/.github/workflows/update_data.yaml
+++ b/.github/workflows/update_data.yaml
@@ -1,8 +1,5 @@
 name: Update data
 
-env:
-  RENV_PATHS_ROOT: ~/.cache/R/renv
-
 on:
   schedule:
     - cron: "0 4 * * *"
@@ -22,15 +19,12 @@ jobs:
         with:
           use-public-rspm: true
 
-      # set up renv
-      - uses: r-lib/actions/setup-renv@v2
-
-      - uses: actions/cache@v1
-        with:
-          path: ${{ env.RENV_PATHS_ROOT }}
-          key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-renv-
+      - name: Install dependencies
+        run: |
+          install.packages(c("curl", "data.table", "dplyr", "fable",
+          "fabletools", "feasts", "glue", "htmltools", "janitor", "lubridate",
+          "magrittr", "purrr", "tidyr", "tsibble", "usethis"))
+        shell: Rscript {0}
 
       - name: Update data
         run: |
