simplify gh action, do not commit latest data

--- a/.github/workflows/update-and-deploy.yaml
+++ b/.github/workflows/update-and-deploy.yaml
@@ -44,10 +44,15 @@ jobs:
           source("data-raw/03_prepare_data_for_modules.R")
         shell: Rscript {0}
 
-      - name: Git Commit and Push Changes
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git add --all
-          git commit -am "add latest data"
-          git push
+      # build the docker image and give it the name main
+      - name: Build image
+        run: docker build -t main .
+      # run the docker image supply the secrets from the github secrets store.
+      - name: execute
+        run: >
+          docker run
+          -e SHINY_ACC_NAME=${{ secrets.SHINY_ACC_NAME }}
+          -e TOKEN=${{secrets.TOKEN}}
+          -e SECRET=${{secrets.SECRET}}
+          -e APP_NAME=${{secrets.APP_NAME}}
+          main
