--- a/.github/workflows/update-and-deploy.yaml
+++ b/.github/workflows/update-and-deploy.yaml
@@ -1,4 +1,4 @@
-name: Update data
+name: Update and deploy daily
 
 on:
   schedule:
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages(c("curl", "data.table", "dplyr", "fable",
+          renv::restore(packages = c("curl", "data.table", "dplyr", "fable",
           "fabletools", "feasts", "glue", "htmltools", "janitor", "lubridate",
           "purrr", "tidyr", "tsibble", "usethis"))
         shell: Rscript {0}
